# uPiper

./: .editorconfig  .editorconfig.editorconfig  .gitattributes  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETE.md  PHASE3_STATUS.md  PR_DESCRIPTION.md  README.en.md  README.md  README_TMP_JAPANESE.md  UNITY_WEBGL_OPENJTALK_IMPLEMENTATION_PLAN.md  WEBGL_BUILD_CHECKLIST.md  WEBGL_INTEGRATION_REPORT.md  _config.yml  create_dict_zip.bat  editmode-results.xml  link.xml  mono_crash.14bf0c452e.0.json  mono_crash.14bf0c452e.1.json  mono_crash.14bf0c453a.0.json  package-lock.json  package.json  playmode-results.xml  serve-webgl-build.py  split-large-files.py  split-openjtalk-data.py  start-test-server.bat  test-complete-pipeline.js  test-onnx-runtime-integration.html  test-openjtalk-browser.html  test-openjtalk-cli.js  test-openjtalk-local.js  test-openjtalk-node.mjs  test-openjtalk-verification.html  test-openjtalk-wasm-cli.js  test-openjtalk-wasm-cli.mjs  (+4 more)
Assets/uPiper/Native/: CMakeLists.txt  README.md  build.bat  build.sh
Assets/uPiper/Native/OpenJTalk/: .gitignore  BUILD_INVESTIGATION.md  CMakeLists.txt  CMakeLists_full.txt  CMakeLists_light.txt  DICTIONARY_UPGRADE_PLAN.md  Doxyfile  build.bat  build.sh  build_ci.sh  fetch_dependencies.sh  fix_macos_library.sh  generate_docs.sh  openjtalk_wrapper.cpp  openjtalk_wrapper.h  test_accent_info  test_debug_parse  test_dict_load_only  test_mecab_full_simple  test_prosody  test_simple_full
Assets/uPiper/Native/OpenJTalk/include/: openjtalk_wrapper.h
Assets/uPiper/Native/OpenJTalk/src/: accent_estimator.c  accent_estimator.h  debug_log.h  error_handling.c  kanji_mapping.h  mecab_darts.h  mecab_dict_index.c  mecab_dict_loader.c  mecab_dict_loader.h  mecab_dict_minimal.h  mecab_full.c  mecab_full.h  mecab_light.c  mecab_light.h  mecab_light_impl.c  mecab_light_impl.h  memory_pool.c  memory_pool.h  openjtalk_core.h  openjtalk_phonemizer.c  openjtalk_phonemizer.h  openjtalk_wrapper.c  openjtalk_wrapper_full.c  openjtalk_wrapper_light.c  openjtalk_wrapper_v2.c  phoneme_converter.c  phoneme_converter.h  phoneme_mapping.h  phoneme_timing.c  phoneme_timing.h  phonemizer.c  phonemizer_internal.h  platform_compat.h  surface_index.c  surface_index.h  utf8_utils.h
Assets/uPiper/Native/OpenJTalk/test/: benchmark_openjtalk.c  test_accent_info.c  test_build_surface_index  test_build_surface_index.c  test_char_bin.c  test_darts_analyze  test_darts_format  test_darts_format.c  test_darts_lookup  test_darts_lookup.c  test_darts_raw  test_darts_search  test_debug_parse.c  test_dict_debug  test_dict_debug.c  test_dict_format  test_dict_load_only.c  test_dict_lookup.c  test_dict_simple  test_dict_structure  test_error_handling.c  test_full_dict  test_full_dict.c  test_full_dict.sh  test_full_dict_new  (+26 more)
Assets/uPiper/Native/cmake/: mingw-w64-x86_64.cmake
NativePlugins/ESpeakNG/: CMakeLists.txt  README.md
NativePlugins/ESpeakNG/include/: espeak_wrapper.h
NativePlugins/Flite/: .gitignore  CMakeLists.txt  CMakeLists_minimal.txt  LICENSE  README.md  USE_PREBUILT.md  build.bat  build.sh  download_flite.ps1  download_flite.sh
NativePlugins/Flite/patches/: fix_us_text.py  us_text_fix.patch
NativePlugins/Flite/src/: flite_unity.c  us_text_stub.c
NativePlugins/OpenJTalk/: .gitignore  CMakeLists.txt  CMakeLists.wasm.txt  CMakeLists_ci.txt  CMakeLists_cross.txt  CMakeLists_debug.txt  CMakeLists_openjtalk_full.txt  CMakeLists_simple_backup.txt  CMakeLists_windows_cross.txt  Dockerfile.android  Dockerfile.wasm  Dockerfile.wasm.full  Dockerfile.wasm.production  Dockerfile.windows-cross  IMPLEMENTATION_PLAN.md  MOCK_MODE_EXPLANATION.md  README.md  README_WASM.md  analyze_android_dependencies.sh  analyze_library_sizes.sh  build.bat  build.sh  build_all_android_abis.bat  build_all_android_abis.sh  build_android.bat  build_android.sh  build_android_all.bat  build_android_docker.bat  build_android_simple.sh  build_ci.sh  build_dependencies.bat  build_dependencies.sh  build_dependencies_android.sh  build_dependencies_ci.sh  build_dependencies_cross.sh  build_dependencies_ios.sh  build_dependencies_msvc.bat  build_full_windows.sh  build_ios.sh  build_simple_wasm.bat  (+53 more)
NativePlugins/OpenJTalk/build_windows/: CMakeLists.txt
NativePlugins/OpenJTalk/include/: openjtalk_wrapper.h  openjtalk_wrapper_v2.h
NativePlugins/OpenJTalk/package/js/: open_jtalk.js  open_jtalk.wasm
NativePlugins/OpenJTalk/scripts/: download_mecab_dict.sh  download_naist_dict.sh  download_openjtalk_source.sh
NativePlugins/OpenJTalk/src/: error_handling.h  mecab_darts.c  mecab_dict_loader.h  mecab_full.c  memory_pool.c  openjtalk_debug_wrapper.c  openjtalk_exec_wrapper.c  openjtalk_full_wrapper.c  openjtalk_mock.c  openjtalk_phonemizer.c  openjtalk_wasm_wrapper.c  phoneme_converter.h  phonemizer.c  platform_compat.h  post.js  pre.js  surface_index.c
NativePlugins/OpenJTalk/test/: benchmark_openjtalk.c  build_test.sh  test_char_bin.c  test_darts_analyze.c  test_darts_raw.c  test_darts_search.c  test_dict_format.c  test_dict_load_only.c  test_dict_simple.c  test_dict_structure.c  test_kanji_issue.c  test_kyou_simple.c  test_load_steps.c  test_prosody.c  test_token_format.c  test_viterbi.c
NativePlugins/OpenJTalk/test_dictionary/: README.md  create_test_dict.py  left-id.def  pos-id.def
NativePlugins/OpenJTalk/wasm/: Dockerfile  Dockerfile.check-lib  Dockerfile.cmake  Dockerfile.debug  Dockerfile.final  Dockerfile.full  Dockerfile.full2  Dockerfile.piper-based  Dockerfile.production  Dockerfile.simple  build-cmake.bat  build-final.bat  build-full.bat  build-full2.bat  build-piper-based.bat  build-production.bat  build-simple.bat  build_wasm.bat  build_wasm_docker.sh  build_with_docker.bat  compare-with-native.mjs  docker-compose.yml  openjtalk-unity.js  openjtalk-unity.wasm  openjtalk_wasm.c  openjtalk_wasm_cmake.c  openjtalk_wasm_complete.c  openjtalk_wasm_full.c  openjtalk_wasm_piper.c  openjtalk_wasm_progressive.c  openjtalk_wasm_simple.c  openjtalk_wasm_wrapper.c  test-comprehensive.html  test-dictionary-validation.mjs  test-openjtalk.mjs
(+958 files in other folders)
